# edubot_ws

./: .gitignore
src/edubot_control/: CMakeLists.txt  CMakeLists.txt.old  edubot_hw_plugin.xml  package.xml
src/edubot_control/config/: edubot_control.yaml  hardware.yaml
src/edubot_control/include/: edubot_hw.hpp  robot_socket.hpp
src/edubot_control/launch/: control.launch  control_gazebo.launch  control_gazebo_open_loop.launch  control_real.launch
src/edubot_control/scripts/: edubot_sim.py  open_loop.py  socket_send.py  socket_server.py
src/edubot_control/src/: edubot_control_node.cpp  edubot_hw.cpp  robot_socket.cpp
src/edubot_description/: CMakeLists.txt  package.xml
src/edubot_description/config/: joint_names_edubot_description.yaml
src/edubot_description/launch/: display.launch  gazebo.launch
src/edubot_description/meshes/: caster_link_1.STL  caster_link_2.STL  wheel_L.STL  wheel_R.STL
src/edubot_description/rviz/: display.rviz
src/edubot_description/urdf/: edubot.urdf  edubot_description.csv  edubot_real.urdf
